# speech-style-bart

./: README.md  dataset.py  inference.ipynb  model.py  pyproject.toml  train.py
configs/: config..yaml  config.yaml
