[tool.poetry]
name = "style"
version = "0.1.0"
description = "Speech Style Convert Model"
authors = ["merry555 <jisukim8873@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
mlflow = "^2.3.2"
pytorch-lightning = "^2.0.2"
torch = "2.0.0"
datasets = "^2.12.0"
transformers = "4.29.1"
evaluate = "^0.4.0"
wandb = "^0.15.3"
sacrebleu = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
